# aoc2021

./: Cargo.toml  README.md  ci.sh
benches/: my_benchmark.rs
src/: d1.rs  d2.rs  main.rs
