[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Jim Newsome <jnewsome@torproject.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false